# CloverLM

./: .gitignore  .gitmodules  README.md  pyproject.toml  report.md
quartet2/: CMakeLists.txt
quartet2/.github/workflows/: build-cmake.yml  build-python.yml
quartet2/csrc/: binding.cpp  dq_tp_q.cu  group_transform.cu  group_transform_and_eden.cu  had128_utils.cuh  rht128.cu  rht128_eden.cu  rht128_requant.cu  rht128_tma.cu  rht128_ws.cu  round_eden_fp4.cu  round_four_six.cu  utils.cuh
quartet2/python/quartet2/: linear.py  quant.py
quartet2/test/: CMakeLists.txt  bench_group_transform.cu  bench_group_transform_eden.cu  bench_rht128_requant.cu  test_eden_fp4.cu  test_group_transform.cu  test_linear.py  test_qutlass_backend.py  test_unbiasedness.py
src/: fake_quartet.py  train.py  utils.py
src/data/: utils_data.py
src/evals/: README.md  auto_eval_4b_acc.sh  convert_cloverlm.sh  convert_dcp_to_pt.py  log_gpt3_baseline.py  setup_dev_eval_acc_flash.sh  upload_wandb.py
src/evals/hf_model/: cloverlm_lm.py  configuration_cloverlm.py  convert_checkpoint.py  modeling_cloverlm.py  tokenization_cloverlm.py
src/evals/lm_tasks_edit/: arc_challenge.yaml  arc_easy_mi.yaml  lambada_openai_norm.yaml
src/evals/vllm_plugin/: SERVING.md  cloverlm_vllm.py  quartet2_quant.py  serve.py
src/models/: mlp.py  parametrizations.py  transformer.py  utils_models.py
